Fix HTML encoding issues in terms-of-use.html

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -104,7 +104,7 @@
 
   <section>
     <h2>15. Contact</h2>
-    <p>If you have questions about these Terms, please contact us at: <a href="mailto:contact@sanatanadharma.in">contact@sanatanadharma.in</a></p>
+    <p>If you have questions about these Terms, please contact us at: <a href="mailto:shlokaapps@gmail.com">shlokaapps@gmail.com</a></p>
   </section>
 
   <footer>
@@ -113,3 +113,4 @@
   </footer>
 </body>
 </html>
+
