Revise Terms of Use for Shloka App
Updated the Terms of Use for the Shloka App, including changes to the effective date, content descriptions, and legal terms.

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,116 +1,140 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Shloka — Terms of Use</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terms of Use - Shloka App</title>
   <style>
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial; line-height:1.6; margin: 24px; color: #111; }
-    header { margin-bottom: 18px; }
-    h1{ font-size: 1.6rem; margin-bottom: 4px; }
-    h2{ margin-top: 18px; font-size: 1.1rem; }
-    p, li { font-size: 0.98rem; }
-    code { background:#f6f8fa; padding:2px 6px; border-radius:4px; }
-    footer { margin-top: 28px; font-size:0.9rem; color:#555; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      line-height: 1.65;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      color: #333;
+    }
+    h1 { color: #2c3e50; border-bottom: 3px solid #3498db; padding-bottom: 10px; }
+    h2 { color: #34495e; margin-top: 28px; }
+    h3 { color: #5d6d7e; margin-top: 18px; }
+    .effective-date { background: #f8f9fa; padding: 10px; border-left: 4px solid #3498db; margin: 20px 0; }
+    .notice { background: #eef7ff; padding: 14px; border-left: 4px solid #3498db; margin: 18px 0; }
+    .contact-info { background: #e8f5e8; padding: 15px; border-radius: 8px; margin: 20px 0; }
+    ul { padding-left: 22px; }
+    li { margin: 6px 0; }
+    code { background: #f6f8fa; padding: 1px 4px; border-radius: 4px; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Shloka — Terms of Use</h1>
-    <p>Effective date: October 29, 2025</p>
-  </header>
 
-  <section>
-    <h2>1. Acceptance of Terms</h2>
-    <p>These Terms of Use ("Terms") govern your access to and use of the Shloka mobile application and any related services provided by the Sanatana Dharma project ("we", "us", or "our"). By downloading, installing, or using Shloka you agree to be bound by these Terms. If you do not agree, do not use the App.</p>
-  </section>
+  <h1>Terms of Use for Shloka App</h1>
 
-  <section>
-    <h2>2. The App and Content</h2>
-    <p>Shloka provides access to a collection of verses, study aids, and related educational materials in multiple dataset flavors. Content may include third-party texts, translations, transliterations, audio, and user-contributed notes.</p>
-    <ul>
-      <li>All content provided in the App is for educational, devotional, and reference purposes only.</li>
-      <li>We do not guarantee that translations or transliterations are perfect; interpretations may vary.</li>
-    </ul>
-  </section>
+  <div class="effective-date">
+    <strong>Effective Date:</strong> February 15, 2026
+  </div>
 
-  <section>
-    <h2>3. License</h2>
-    <p>Subject to your compliance with these Terms, we grant you a limited, non-exclusive, non-transferable, revocable license to use the App on devices you own or control for personal, non-commercial purposes.</p>
-  </section>
+  <h2>1. Acceptance of These Terms</h2>
+  <p>
+    These Terms of Use ("Terms") govern your access to and use of the Shloka App mobile application (the "App").
+    By downloading, installing, or using the App, you agree to these Terms.
+    If you do not agree, do not use the App.
+  </p>
 
-  <section>
-    <h2>4. Restrictions</h2>
-    <p>You agree not to:</p>
-    <ul>
-      <li>Copy, distribute, sell, rent, sublicense, or make the App or its content available to third parties except as expressly permitted by these Terms;</li>
-      <li>Reverse engineer, decompile, or attempt to extract source code or data from the App, except to the extent permitted by applicable law;</li>
-      <li>Use the App in a way that violates any applicable law or regulation.</li>
-    </ul>
-  </section>
+  <h2>2. The App and Its Purpose</h2>
+  <p>
+    Shloka App provides access to spiritual verses, related texts, and study aids in multiple Indian scripts and languages.
+    Content is provided for educational, devotional, and reference purposes.
+  </p>
+  <p>
+    Texts, translations, transliterations, and interpretations may vary by source.
+    No guarantee is made regarding completeness, accuracy, or interpretive correctness.
+  </p>
+  <p>
+    The App does not provide account creation, user profiles, or user-generated content features.
+  </p>
 
-  <section>
-    <h2>5. User Content and Contributions</h2>
-    <p>If the App allows you to submit notes, corrections, or other content ("User Content"), you retain ownership of what you submit but grant us a perpetual, royalty-free, worldwide license to use, copy, modify, publish, and distribute your User Content to operate and improve the App and the Services.</p>
-    <p>You represent and warrant that you have the right to submit your User Content and that it does not infringe any third-party rights or violate applicable laws.</p>
-  </section>
+  <h2>3. License to Use</h2>
+  <p>
+    We grant you a limited, non-exclusive, non-transferable, revocable license to use the App
+    on devices you own or control, for personal and non-commercial use, subject to these Terms.
+  </p>
 
-  <section>
-    <h2>6. Purchases and Subscriptions</h2>
-    <p>The App may offer in-app purchases, subscriptions, or premium features. Terms related to pricing, billing, and cancellation are governed by the relevant app store (for example Apple App Store) and your purchase agreement with that store. Refunds and billing disputes must generally be handled through your app store account.</p>
-    <p>We may access and verify purchase receipts to enable subscription-only features; by enabling subscriptions you consent to this verification.</p>
-  </section>
+  <h2>4. Restrictions</h2>
+  <p>You agree not to:</p>
+  <ul>
+    <li>Copy, distribute, sell, rent, sublicense, or commercially exploit the App or its content</li>
+    <li>Reverse engineer, decompile, or attempt to extract source code or protected data, except as permitted by law</li>
+    <li>Use the App in a manner that violates applicable laws or regulations</li>
+  </ul>
 
-  <section>
-    <h2>7. Privacy</h2>
-    <p>Our Privacy Policy explains how we collect, use, and share personal information. The Privacy Policy is part of these Terms by reference. See: <a href="https://sanatana-dharma.github.io/Shloka/privacy-policy.html">Privacy Policy</a>.</p>
-  </section>
+  <div class="notice">
+    <strong>Important:</strong> Purchases and subscriptions (if offered) are handled by the relevant app store and are governed by that store’s terms.
+  </div>
 
-  <section>
-    <h2>8. Third-Party Services and Links</h2>
-    <p>The App may contain links to third-party websites, resources, or services (including content hosted via Cloudflare Workers or other APIs). We are not responsible for the availability of third-party services or their content, and we do not endorse or assume liability for third-party materials.</p>
-  </section>
+  <h2>5. Purchases and Subscriptions</h2>
+  <p>
+    Paid features, subscriptions, and billing are handled by the relevant app store (such as Apple App Store or Google Play).
+    Pricing, renewals, cancellations, and refunds are governed by the terms of that store.
+  </p>
+  <p>
+    We may verify purchase status to enable subscription features.
+  </p>
 
-  <section>
-    <h2>9. Warranty Disclaimer</h2>
-    <p>The App is provided "as is" and "as available" without warranties of any kind. To the fullest extent allowed by law, we disclaim all warranties, express or implied, including merchantability, fitness for a particular purpose, accuracy of content, and non-infringement.</p>
-  </section>
+  <h2>6. Privacy</h2>
+  <p>
+    Our Privacy Policy explains how limited data is processed in connection with the Shloka App.
+    It forms part of these Terms.
+    See: <a href="https://sanatana-dharma.github.io/Shloka/privacy-policy.html">Privacy Policy</a>.
+  </p>
 
-  <section>
-    <h2>10. Limitation of Liability</h2>
-    <p>To the maximum extent permitted by law, in no event will we be liable for indirect, incidental, special, consequential, or punitive damages, including loss of profits, data, or other intangible losses, arising from your use of or inability to use the App.</p>
-    <p>Our aggregate liability for direct damages will not exceed the greater of (a) the total amount paid by you to us in the past 12 months (if any) or (b) $50 USD.</p>
-  </section>
+  <h2>7. Third-Party Services</h2>
+  <p>
+    The App may rely on third-party services (such as app stores, infrastructure providers, or APIs).
+    We are not responsible for third-party services or their content, which are governed by their own terms.
+  </p>
 
-  <section>
-    <h2>11. Indemnification</h2>
-    <p>You agree to indemnify and hold us harmless from any claims, losses, liabilities, damages, and expenses (including reasonable attorneys' fees) arising from your use of the App, your breach of these Terms, or your User Content.</p>
-  </section>
+  <h2>8. Disclaimer</h2>
+  <p>
+    The App is provided on an "as is" and "as available" basis.
+    To the extent permitted by law, we disclaim warranties of any kind,
+    including accuracy, fitness for a particular purpose, and uninterrupted availability.
+  </p>
 
-  <section>
-    <h2>12. Termination</h2>
-    <p>We may suspend or terminate your access to the App at any time, with or without notice, for conduct that we believe violates these Terms or is harmful to other users, our service, or our operations.</p>
-  </section>
+  <h2>9. Limitation of Liability</h2>
+  <p>
+    To the extent permitted by law, we are not liable for indirect, incidental, consequential,
+    or special damages arising from your use of the App.
+  </p>
 
-  <section>
-    <h2>13. Changes to These Terms</h2>
-    <p>We may revise these Terms from time to time. If we make material changes, we'll attempt to provide notice (for example by posting an updated "Effective date" at the top of this page or via in-app notice). Continued use after a change constitutes acceptance of the updated Terms.</p>
-  </section>
+  <h2>10. Suspension or Termination</h2>
+  <p>
+    We may suspend or discontinue access to the App if required for legal, security,
+    or operational reasons, or if these Terms are materially violated.
+  </p>
 
-  <section>
-    <h2>14. Governing Law and Dispute Resolution</h2>
-    <p>These Terms are governed by the laws of India. Any dispute arising out of or in connection with these Terms will be subject to the exclusive jurisdiction of the courts of Chennai, Tamil Nadu, India.</p>
-  </section>
+  <h2>11. Changes to These Terms</h2>
+  <p>
+    We may update these Terms from time to time.
+    Updated Terms will be posted on this page with a revised effective date.
+    Continued use of the App means the updated Terms apply.
+  </p>
 
-  <section>
-    <h2>15. Contact</h2>
-    <p>If you have questions about these Terms, please contact us at: <a href="mailto:shlokaapps@gmail.com">shlokaapps@gmail.com</a></p>
-  </section>
+  <h2>12. Governing Law</h2>
+  <p>
+    These Terms are governed by the laws of India.
+  </p>
 
-  <footer>
-    <p>Last updated: October 29, 2025</p>
-    <p>Note: This Terms of Use is provided for general informational purposes and does not constitute legal advice. Consider having this document reviewed by qualified counsel before publishing.</p>
-  </footer>
+  <h2>13. Contact</h2>
+  <div class="contact-info">
+    <p>If you have questions about these Terms, contact:</p>
+    <p><strong>Email:</strong> shlokaapps@gmail.com</p>
+  </div>
+
+  <hr style="margin: 36px 0; border: none; border-top: 1px solid #eee;" />
+  <p>
+    <strong>Summary:</strong> Shloka App is provided for personal, educational, and devotional use.
+    Subscriptions (if offered) are handled by app stores.
+    The App is offered as-is and does not provide accounts, profiles, or user-generated content features.
+  </p>
+
 </body>
 </html>
-
