Revise privacy policy for clarity and structure
Replaced Shloka with Shloka App

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,42 +33,54 @@
 
   <h2>1. Introduction</h2>
   <p>
-    Sanatana Dharma ("we", "our", or "us") operates the Shloka mobile application (the "App" or "Service").
-    This Privacy Policy explains what information we process, why we process it, and your choices.
+    Sanatana Dharma ("we", "our", or "us") operates the Shloka App mobile application (the "App" or "Service").
+    This Privacy Policy explains what information is processed, why it is processed, and your rights and choices.
   </p>
 
-  <h2>2. Information We Process</h2>
-
-  <h3>2.1 Spiritual Content and App Preferences</h3>
+  <h2>2. Data Controller</h2>
   <p>
-    The App downloads spiritual content (such as shlokas, chapters, and related data) and stores content and settings locally on your device for app functionality.
+    For the purposes of applicable data protection laws, the data controller is:
+  </p>
+  <p>
+    <strong>Sanatana Dharma</strong><br />
+    India
   </p>
 
-  <h3>2.2 Subscription and Entitlement Data (RevenueCat + App Stores)</h3>
+  <h2>3. Information We Process</h2>
+
+  <h3>3.1 Spiritual Content and App Preferences</h3>
+  <p>
+    The App downloads spiritual content (such as shlokas, chapters, and related data) and stores content and settings locally on your device
+    for app functionality. We do not receive or access the locally stored content on your device.
+  </p>
+
+  <h3>3.2 Subscription and Entitlement Data (App Stores + RevenueCat)</h3>
   <p>
     If you use paid features, we process limited subscription-related data through app stores and RevenueCat to validate purchases and manage access.
   </p>
   <ul>
-    <li>Pseudonymous app user ID (for example, values like <code>usr_...</code>)</li>
-    <li>Subscription product ID and entitlement status (active/expired/etc.)</li>
+    <li>Pseudonymous app user identifier (for example, values like <code>usr_...</code>)</li>
+    <li>Subscription product identifiers and entitlement status (active/expired/etc.)</li>
     <li>Purchase lifecycle event data (renewal, cancellation, expiration, refund/revoke)</li>
     <li>Store/environment metadata (for example, App Store / Sandbox / Production)</li>
     <li>Technical request metadata needed for security, reliability, and abuse prevention</li>
   </ul>
   <p>
-    We do not require your name, phone number, or home address to use the App.
+    We do <strong>not</strong> collect or require your name, username, email address, phone number, or home address to use the App.
+    We do not provide such information to RevenueCat or the app stores.
   </p>
 
-  <h3>2.3 Authentication and Security Data</h3>
+  <h3>3.3 Authentication and Security Data</h3>
   <p>
-    To protect gated content and service integrity, our backend may process session/authentication tokens and service logs necessary for security and troubleshooting.
+    To protect gated content and service integrity, our backend may process session/authentication tokens and service logs necessary
+    for security, abuse prevention, and troubleshooting.
   </p>
 
   <div class="notice">
     <strong>Important:</strong> We do <em>not</em> use your data for third-party advertising and we do <em>not</em> sell personal data.
   </div>
 
-  <h2>3. How We Use Information</h2>
+  <h2>4. How We Use Information</h2>
   <ul>
     <li>Deliver and update spiritual content</li>
     <li>Enable and enforce subscription access</li>
@@ -78,7 +90,7 @@
     <li>Comply with applicable legal obligations</li>
   </ul>
 
-  <h2>4. Legal Bases (Where Applicable)</h2>
+  <h2>5. Legal Bases (Where Applicable)</h2>
   <p>Depending on your location, we rely on one or more of the following:</p>
   <ul>
     <li>Performance of a contract (providing app features/subscriptions)</li>
@@ -87,8 +99,8 @@
     <li>Consent, where required by law</li>
   </ul>
 
-  <h2>5. Third-Party Processors and Services</h2>
-  <p>We use trusted providers to operate the Service, including:</p>
+  <h2>6. Third-Party Processors and Services</h2>
+  <p>We use service providers to operate the Service, including:</p>
   <ul>
     <li><strong>Apple App Store / Google Play</strong> for billing and purchase processing</li>
     <li><strong>RevenueCat</strong> for subscription entitlement management and lifecycle events</li>
@@ -104,8 +116,10 @@
     <li>Cloudflare Privacy Policy: <a href="https://www.cloudflare.com/privacypolicy/" target="_blank" rel="noopener noreferrer">https://www.cloudflare.com/privacypolicy/</a></li>
   </ul>
 
-  <h2>6. Data Sharing</h2>
-  <p>We may share limited data only as needed to:</p>
+  <h2>7. Data Sharing</h2>
+  <p>
+    We may share limited data only as needed to:
+  </p>
   <ul>
     <li>Operate subscriptions and entitlement checks with our processors</li>
     <li>Comply with law, regulation, legal process, or enforceable governmental requests</li>
@@ -113,30 +127,39 @@
     <li>Support business transfers (e.g., merger/acquisition), subject to confidentiality and legal safeguards</li>
   </ul>
 
-  <h2>7. Data Retention</h2>
+  <h2>8. Data Retention</h2>
+  <ul>
+    <li>Subscription and billing records: retained as required for billing reconciliation and applicable accounting/tax obligations</li>
+    <li>Security and operational logs: typically retained for up to 90 days unless required longer for investigation, security, or legal purposes</li>
+  </ul>
+
+  <h2>9. International Data Transfers</h2>
   <p>
-    We retain data only as long as necessary for the purposes described in this Policy, including billing reconciliation, security, legal compliance, and dispute resolution.
-    Retention periods may vary by data type and legal requirements.
+    Your data may be processed in countries other than your own, including the United States.
+    Where required, we apply appropriate safeguards for international transfers under applicable law.
   </p>
 
-  <h2>8. International Data Transfers</h2>
-  <p>
-    Your data may be processed in countries other than your own. Where required, we apply appropriate safeguards for international transfers under applicable law.
-  </p>
-
-  <h2>9. Security</h2>
+  <h2>10. Security</h2>
   <p>
     We use reasonable technical and organizational measures to protect data, including secure transport, access controls, and operational safeguards.
     No system is 100% secure, but we continuously improve our controls.
   </p>
 
-  <h2>10. Children's Privacy</h2>
+  <h2>11. Children’s Privacy</h2>
   <p>
-    The App is intended for a general audience. We do not knowingly collect personal information from children in violation of applicable law.
-    If you believe a child provided data improperly, contact us and we will review and delete as appropriate.
+    The App is intended for a general audience and may be used by anyone capable of reading the supported scripts and languages.
+    The App is not specifically directed at any particular age group.
+  </p>
+  <p>
+    We do not knowingly collect personal information such as names, email addresses, phone numbers, or physical addresses from users of any age,
+    including children. The App does not include account creation, user profiles, or social features.
+  </p>
+  <p>
+    If you believe that personal data of a child has been collected inadvertently, please contact us.
+    Upon verification, we will take appropriate steps to delete such information.
   </p>
 
-  <h2>11. Your Rights and Choices</h2>
+  <h2>12. Your Rights and Choices</h2>
   <p>Depending on your jurisdiction, you may have rights to:</p>
   <ul>
     <li>Request access, correction, deletion, or portability of personal data</li>
@@ -148,13 +171,18 @@
     To exercise rights, contact us using the details below. We may need to verify your request before fulfilling it.
   </p>
 
-  <h2>12. Changes to This Privacy Policy</h2>
+  <h2>13. Governing Law</h2>
+  <p>
+    This Privacy Policy is governed by the laws of India.
+  </p>
+
+  <h2>14. Changes to This Privacy Policy</h2>
   <p>
     We may update this Policy from time to time. We will post updates on this page and revise the Effective Date above.
     Your continued use of the Service after changes become effective means the updated Policy applies.
   </p>
 
-  <h2>13. Contact Information</h2>
+  <h2>15. Contact Information</h2>
   <div class="contact-info">
     <p>If you have questions about this Privacy Policy, contact:</p>
     <p><strong>Email:</strong> shlokaapps@gmail.com</p>
@@ -162,7 +190,8 @@
 
   <hr style="margin: 36px 0; border: none; border-top: 1px solid #eee;" />
   <p>
-    <strong>Summary:</strong> Shloka is privacy-focused. We process limited data needed to deliver content, run subscriptions, and secure the service. We do not sell personal data or use third-party advertising networks.
+    <strong>Summary:</strong> Shloka is privacy-focused. We process limited data needed to deliver content, run subscriptions, and secure the service.
+    We do not sell personal data or use third-party advertising networks.
   </p>
 </body>
 </html>
